1.3.0 (unreleased)
=====
* Add support for `color_space` and `color_range`

1.2.8 (01-01-2026)
=====
* `avfilter`: Added `filter_name`.
* `avfilter`: Fixed/tested complex use of `Avfilter.parse`
* `avutil`: Reimplemented log callback support with a lock- and
            ocaml- free C side.

1.2.7 (2025-10-31)
======
* Add ffmpeg 8.0 support
* Fix CAMLparam definitions in C stubs (avoids potential heap 
corruption)

1.2.6 (2025-08-26)
======
* Fix memleak in `ocaml_avcodec_receive_frame` and
  `ocaml_avcodec_receive_packet`

1.2.5 (2025-05-26)
======
* Rename `Avutil.Channel_layout.get_native_id`
  into `Avutil.Channel_layout.get_mask` with deprecated
  backward-compatible function.
* Fixed channel_layout allocation.

1.2.4 (2025-04-16)
======
* Fix avio max buffer error (#72)

1.2.3 (2025-04-13)
======
* Cleanup C allocations.

1.2.2 (2025-02-04)
======
* Fixed memory leak when an exception is raised
  while initializing a container with a `avio`
  data source.

1.2.1 (2024-10-29)
======
* Fixed plane size when allocating big array planes in `swscale`.
* Added packed big array API to `swscale` where all planes are alloacted in
  on contiguous memory region.

1.2.0 (2024-09-24)
=====
* Removed unused `Av.write_audio_frame`/`Av.write_video_frame`.
* Remove use of deprecated `av_packet_side_data_get`
* Added support to get all streams from output container
* Removed unreliable `Av.was_keyframe`
* Added `on_keyframe` to `Av.write_frame`.
* Switched to new channel layout API.

1.1.11 (2024-03-19)
======
* Fix segfault with the new OCaml 5 concurrent GC.

1.1.10 (2024-01-17)
======
* Fixed codec attribute for AAC.
* Added non-interleaved API for Av.

1.1.9 (2023-10-27)
=====
* Added support for AV_CODEC_ID_WRAPPED_AVFRAME
  as valid audio/video codec.
* Added AV_CODEC_ID_NONE to all codec id classes
  to prevent unecessary failures when passing it
  as detected coded_id.

1.1.8 (2023-07-01)
=====
* Added asynchronous stream copy creation API.