@@ -1,6 +1,7 @@
 1.3.0 (unreleased)
 =====
-* Add support for `color_space` and `color_range`
+* Add support for `color_space`, `color_range`, `color_primaries`,
+  `color_trc` and `chroma_location`.
 
 1.2.8 (01-01-2026)
 =====
